syntax = "proto3";

//  protoc *.proto \
//    --go_out=. \
//    --go_opt=paths=source_relative \
//    --proto_path=.
// or  protoc *.proto --go_out=./ --go-grpc_out=./
package user;

option go_package="./userpb";

message RegisterRequest {
  string username = 1;
  string password = 2;
  string name = 3;
  string gender = 4;
  string email = 5;
}

message RegisterResponse{
  string status = 1;
}

message UserInfoRequest {
  int64 id = 1;
  string username = 3;
}

message UserInfoResponse {
  string username = 1;
  string password = 2;
  string name = 3;
  string gender = 4;
  string email = 5;
}

service UserService{
  rpc Register(RegisterRequest) returns (RegisterResponse){}
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse){}
}